--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -1,16 +1,14 @@
 <div ng-include="'intro/index.tpl.html'"></div>
-
 <canvas id="scene"></canvas>
 
-<div id="header-container">
-	<canvas id="scene"></canvas>
+<div id="header-container container">
     <div style="text-align:center;" id="header-text-area">
-       <p style="color:rgb(255,255,255);font-size:64px;margin-left:10%">empowered financial decisions</p>
-       <p style="color:rgb(255,255,255);margin-left:15%">backed by sound, open, data</p>
+       <p style="font-size:64px;margin-left:10%">empowered financial decisions</p>
+       <p style="margin-left:15%">backed by sound, open, data</p>
     </div>
 </div>
 
-<div class="centered-width">
+<div class="centered-width container">
 	<br>
 	<h3 style="text-align:center;">a computational network designed to normalize risk and equalize investment returns.</h3>
 	<br><br>
@@ -52,10 +50,10 @@
 	<br><br><br>
 	<p class="lead">where does the money go?</p>
 	<p class="lead">mapping out the investment space</p>
-	<br><br><br><br><br><br>
+	<br><br>
 </div>
 
-<div style="background-color:rgb(220,220,240);height:750px;">
+<div style="background-color:rgb(220,220,220);height:750px;">
 	<br><br><br>
 	<h1 style="text-align:center;">why you'll love investingfor</h1>
 	<br><br>
@@ -71,13 +69,15 @@
 	<p class="lead" style="text-align:center;">investingfor us all.</p>
 	<br><br><br>
 </div>
-<div style="background-color:rgb(240,220,220);height:750px;text-align:center;">
+
+<div style="background-color:rgb(180,180,180);height:750px;text-align:center;">
 	<br><br><br>
 	<h1>sound and transparent investments</h1>
 </div>
-<div style="background-color:rgb(220,240,220);height:750px;text-align:center;">
+
+<div style="background-color:rgb(120,120,120);height:750px;text-align:center;">
 	<br><br><br>
 	<h1>more stuff</h1>
-	<p>a decentralized network that works together to power financial simulations. financed by investmentcoin. r8
-</p></div>
+	<p>a decentralized network that works together to power financial simulations. financed by investmentcoin. r8</p>
+</div>
 
