--- a/assets/src/app/sidebar/index.tpl.html
+++ b/assets/src/app/sidebar/index.tpl.html
@@ -17,7 +17,7 @@
             </a>
         </div>
         <div class="item-container">
-            <a href="/portfolio">
+            <a href="#">
                 <div class="list-item">
                     <div class="nav-small-list"><i class="fa fa-picture-o"></i></div>
                     <div class="nav-large-list">Portfolio</div>
