--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -1,61 +1,52 @@
 <div ng-include="'intro/index.tpl.html'"></div>
 <canvas id="scene"></canvas>
-<!--<nvd3 options='options' data='data'></nvd3>-->
+<nvd3 options='options' data='data'></nvd3>
 <nvd3 options='directedOptions' data='directedData'></nvd3>
 
-<div id="header-container container">
+<div class="container" id="about">
+	<div style="height:50px;"></div>
     <div style="text-align:center;" id="header-text-area">
-       <p style="font-size:64px;margin-left:10%">empowered financial decisions</p>
-       <p style="margin-left:15%">backed by sound, open, data</p>
+       <p style="font-size:64px;">empowered financial decisions</p>
+       <p style="">backed by sound, open, data</p>
     </div>
 </div>
 
-<div class="centered-width container">
+<div class="container">
 	<br>
 	<h3 style="text-align:center;">a computational network designed to normalize risk and equalize investment returns.</h3>
 	<br><br>
-	<div class="section-tout"> 
-	  <div class="container">
-	    <div class="row">
-	      <div class="col-lg-4 col-sm-6">
-	        <h3><i class="fa fa-file-o"></i> open datasets -- coin</h3>
-	        <p>data, we use. data we prouduce, together. </p>
-	      </div>
-	      <div class="col-lg-4 col-sm-6">
-	        <h3><i class="fa fa-github"></i> community algs</h3>
-	        <p>contribute. collab, invest, bitcoin</p>
-	      </div>
-	      <div class="col-lg-4 col-sm-6">
-	        <h3><i class="fa fa-wrench"></i>back testing -- open data -- look at our results </h3>
-	        <p>(y)our machines are continuously running and producing valuable investment information, check it.</p>
-	      </div>
-	      <div class="col-lg-4 col-sm-6">
-	        <h3><i class="fa fa-cogs"></i> transparent finance </h3>
-	         <p>Changes are contained with transparency.</p>
-	      </div>
-	      <div class="col-lg-4 col-sm-6">
-	        <h3><i class="fa fa-cloud"></i> mapping the market</h3>
-	        <p><a href="./help/#api">APIs</a> are available.</p>
-	      </div>
-	      <div class="col-lg-4 col-sm-6">
-	        <h3><i class="fa fa-bullhorn"></i> Stay Updated</h3>
-	        <p>Be notified about updates by subscribing.</p>
-	      </div>
-	    </div>
-
-	  </div>
+	<div class="row">
+		<div class="col-lg-4 col-sm-6">
+		  <h3><i class="fa fa-file-o"></i> open datasets</h3>
+		  <p>data, we use. data we prouduce, together.</p>
+		</div>
+		<div class="col-lg-4 col-sm-6">
+		  <h3><i class="fa fa-github"></i> community algs</h3>
+		  <p>contribute. collab. invest.</p>
+		</div>
+		<div class="col-lg-4 col-sm-6">
+		  <h3><i class="fa fa-wrench"></i> view our results </h3>
+		  <p>(y)our machines are continuously running and producing valuable investment information.</p>
+		</div>
+		<div class="col-lg-6 col-sm-6">
+		  <h3><i class="fa fa-cogs"></i> transparent finance </h3>
+		</div>
+		<div class="col-lg-6 col-sm-6">
+		  <h3><i class="fa fa-cloud"></i> mapping the market</h3>
+		  <p><a href="./help/#api">APIs</a> are available.</p>
+		</div>
 	</div>
 
 	<br>
 	<p class="lead">nice...</p>
-	<a href="/stats/">now let me see some numbers</a>
+	<a href="#">now let me see some numbers</a>
 	<br><br><br>
 	<p class="lead">where does the money go?</p>
 	<p class="lead">mapping out the investment space</p>
 	<br><br>
 </div>
 
-<div style="background-color:rgb(220,220,220);height:750px;">
+<div style="background-color:rgb(220,220,220);">
 	<br><br><br>
 	<h1 style="text-align:center;">why you'll love investingfor</h1>
 	<br><br>
@@ -72,14 +63,18 @@
 	<br><br><br>
 </div>
 
-<div style="background-color:rgb(180,180,180);height:750px;text-align:center;">
+<div style="background-color:rgb(180,180,180);text-align:center;">
 	<br><br><br>
 	<h1>sound and transparent investments</h1>
+	<br><br><br>
 </div>
 
-<div style="background-color:rgb(120,120,120);height:750px;text-align:center;">
+<div style="background-color:rgb(120,120,120);text-align:center;">
 	<br><br><br>
 	<h1>more stuff</h1>
 	<p>a decentralized network that works together to power financial simulations. financed by investmentcoin. r8</p>
+	<br><br><br>
 </div>
+
+<div style="text-align:center" ng-include="'register/index.tpl.html'"></div>
 
