--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -39,6 +39,5 @@
     </svg>
     <!--<video id="video" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
         <source src="videos/stock.mp4" type="video/mp4">
-    </video>
-    <img class="intro-img" id="image" src="http://36.media.tumblr.com/318b26ada390554e3940e1907c0e6d0f/tumblr_no0pwu8TmB1uuhx17o1_1280.jpg">-->
+    </video>-->
 </div>
