--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,6 +44,7 @@
     <script src="/bower_components/nvd3/build/nv.d3.js"></script>
     <script src="/bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
     <script src="/src/app/about/index.js"></script>
+    <script src="/src/app/account/index.js"></script>
     <script src="/src/app/app.js"></script>
     <script src="/src/app/home/index.js"></script>
     <script src="/src/app/intro/index.js"></script>
