--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -14,6 +14,7 @@
 <div class="container">
 	<br>
 	<h3 style="text-align:center;">a computational network designed to normalize risk and equalize investment returns.</h3>
+	<p>select financial representatives</p>
 	<br><br>
 	<div class="row">
 		<div class="col-lg-4 col-sm-6">
@@ -21,28 +22,27 @@
 		  <p>data, we use. data we prouduce, together.</p>
 		</div>
 		<div class="col-lg-4 col-sm-6">
-		  <h3><i class="fa fa-github"></i> community algs</h3>
+		  <h3><i class="fa fa-github"></i> community discussion</h3>
 		  <p>contribute. collab. invest.</p>
 		</div>
 		<div class="col-lg-4 col-sm-6">
-		  <h3><i class="fa fa-wrench"></i> view our results </h3>
-		  <p>(y)our machines are continuously running and producing valuable investment information.</p>
+		  <h3><i class="fa fa-wrench"></i> view the analysis </h3>
+		  <p>(y)our machines are continuously working to producing valuable investment information.</p>
 		</div>
 		<div class="col-lg-6 col-sm-6">
 		  <h3><i class="fa fa-cogs"></i> transparent finance </h3>
+		  <p></p>
 		</div>
 		<div class="col-lg-6 col-sm-6">
-		  <h3><i class="fa fa-cloud"></i> mapping the market</h3>
-		  <p><a href="./help/#api">APIs</a> are available.</p>
+		  <h3><i class="fa fa-cloud"></i> mapping the investment space</h3>
+		  <p><a href="#">where does the money go?</p>
 		</div>
 	</div>
 
 	<br>
 	<p class="lead">nice...</p>
-	<a href="#">now let me see some numbers</a>
+	<a href="/about">now let me see some numbers</a>
 	<br><br><br>
-	<p class="lead">where does the money go?</p>
-	<p class="lead">mapping out the investment space</p>
 	<br><br>
 </div>
 
