--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,9 +46,11 @@
     <script src="/src/app/about/index.js"></script>
     <script src="/src/app/account/index.js"></script>
     <script src="/src/app/app.js"></script>
+    <script src="/src/app/footer/index.js"></script>
     <script src="/src/app/home/index.js"></script>
     <script src="/src/app/intro/index.js"></script>
     <script src="/src/app/login/index.js"></script>
+    <script src="/src/app/member/index.js"></script>
     <script src="/src/app/nav/index.js"></script>
     <script src="/src/app/register/index.js"></script>
     <script src="/src/common/models/data.js"></script>
