--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -1,48 +1,48 @@
 <div ng-include="'intro/index.tpl.html'"></div>
-<nvd3 options='options' data='data'></nvd3>
-<nvd3 options='directedOptions' data='directedData'></nvd3>
+<!--<nvd3 options='options' data='data'></nvd3>
+<nvd3 options='directedOptions' data='directedData'></nvd3>-->
 
 <div class="container" id="about">
 	<div style="height:50px;"></div>
     <div style="text-align:center;" id="header-text-area">
-       <p style="font-size:64px;">empowered financial decisions</p>
-       <p style="">backed by sound, open, data</p>
+       <h1>empowered financial representation</h1>
+       <h3 style="">backed by sound, open, data</h3>
     </div>
 </div>
 
 <div class="container">
 	<br>
-	<h3 style="text-align:center;">a computational network designed to normalize risk and equalize investment returns.</h3>
+	<!--<h3 style="text-align:center;">a computational network designed to normalize risk and equalize investment returns.</h3>-->
 	<p>select financial representatives</p>
-	<br><br>
+	<br>
 	<div class="row">
-		<div class="col-lg-4 col-sm-6">
-		  <h3><i class="fa fa-file-o"></i> open datasets</h3>
-		  <p>data, we use. data we prouduce, together.</p>
-		</div>
-		<div class="col-lg-4 col-sm-6">
-		  <h3><i class="fa fa-github"></i> community discussion</h3>
-		  <p>contribute. collab. invest.</p>
-		</div>
-		<div class="col-lg-4 col-sm-6">
-		  <h3><i class="fa fa-wrench"></i> view the analysis </h3>
-		  <p>(y)our machines are continuously working to producing valuable investment information.</p>
+		<div class="col-lg-6 col-sm-6">
+			<h3><i class="fa fa-wrench"></i> financial representation </h3>
+			<p>a community of transparent analysts </p>
 		</div>
 		<div class="col-lg-6 col-sm-6">
-		  <h3><i class="fa fa-cogs"></i> transparent finance </h3>
-		  <p></p>
-		</div>
-		<div class="col-lg-6 col-sm-6">
-		  <h3><i class="fa fa-cloud"></i> mapping the investment space</h3>
-		  <p><a href="#">where does the money go?</p>
+			<h3><i class="fa fa-github"></i> community collaboration and discussion</h3>
+			<p>contribute. collab. invest.</p>
 		</div>
 	</div>
-
+	<div class="row">
+		<div class="col-lg-4 col-sm-6">
+			<h3><i class="fa fa-file-o"></i> open datasets</h3>
+			<p>data, we use. data we prouduce, together.</p>
+		</div>
+		<div class="col-lg-4 col-sm-6">
+			<h3><i class="fa fa-wrench"></i> view the analysis </h3>
+			<p>distributed networks working together to give you the cutting edge</p>
+		</div>
+		<div class="col-lg-4 col-sm-6">
+			<h3><i class="fa fa-cogs"></i> transparent finance </h3>
+			<p>data-backed and proven results</p>
+		</div>
+	</div>
 	<br>
 	<p class="lead">nice...</p>
 	<a href="/about">now let me see some numbers</a>
 	<br><br><br>
-	<br><br>
 </div>
 
 <div style="background-color:rgb(220,220,220);">
@@ -62,16 +62,20 @@
 	<br><br><br>
 </div>
 
-<div style="background-color:rgb(180,180,180);text-align:center;">
+<div style="background-color:rgb(240,240,240);text-align:center;">
 	<br><br><br>
-	<h1>sound and transparent investments</h1>
+	<div class="container">
+		<h1>Activity</h1>
+		<h4>sound and transparent investments</h4>
+	</div>
 	<br><br><br>
 </div>
 
-<div style="background-color:rgb(120,120,120);text-align:center;">
+<div style="background-color:rgb(220,220,220);">
 	<br><br><br>
-	<h1>more stuff</h1>
-	<p>a decentralized network that works together to power financial simulations. financed by investmentcoin. r8</p>
+	<div class="container">
+		<p>decentralized network that works together to power financial simulations.</p>
+	</div>
 	<br><br><br>
 </div>
 
