--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -50,6 +50,103 @@ hr {
   border-top: 1px solid #2AB996;
 }
 
+.selfClear:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.social-log {
+    text-align: center;
+}
+.social-log a {
+    margin: 3px;
+    display: inline-block;
+}
+.social-log i {
+    color: #EF8D09;
+}
+.login-form {
+
+}
+.form-group {
+    position: relative;
+    margin-bottom: 15px;
+}
+.form-control {
+    width: 100%;
+    height: 50px;
+    font-size: 1em;
+    border: none;
+    padding: 5px 7px 5px 15px;
+    background: #fff;
+    color: #666;
+    border: 2px solid #ddd;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+.form-control:focus {
+    border-color: #002c54;
+    color: #002c54;
+    font-weight: bold;
+}
+.form-group .fa {
+    position: absolute;
+    right: 15px;
+    top: 17px;
+    color: #EF8D09;
+}
+.log-status.wrong-entry {
+    -moz-animation: wrong-log 0.3s;
+    -webkit-animation: wrong-log 0.3s;
+    animation: wrong-log 0.3s;
+}
+.log-status.wrong-entry .form-control, .wrong-entry .form-control+.fa {
+    border-color: #ed1c24;
+    color: #ed1c24;
+}
+.log-btn {
+    background-color: #002c54;
+    color: #fff!important;
+    width: 100%;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 1em;
+    font-weight: 800;
+    letter-spacing: 1px;
+    border-radius: 0;
+}
+.log-btn:hover {
+    background: #001B34;
+    color: #fff!important;
+}
+.log-btn:focus, .log-btn:active {
+    background-color: #001B34!important;
+    color: #fff!important;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.75);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,0.75);
+}
+.link {
+    text-decoration: none;
+    color: #C6C6C6;
+    float: right;
+    font-size: 12px;
+    margin-bottom: 15px;
+}
+.link:hover {
+    text-decoration: underline;
+    color: #8C918F;
+}
+.intro-header {
+    margin-bottom: 50px;
+    background: #EEEEEE;
+}
+.intro-header .site-heading, .intro-header .post-heading, .intro-header .page-heading {
+    padding: 50px 0 50px;
+    color: #252525;
+}
+
 .flex {
     display: flex;
     flex-direction: row;
