--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,75 +1,79 @@
 <!DOCTYPE html>
 <html ng-app="investing" ng-controller="AppCtrl">
     <head>
-        <title>NOVO</title>
+        <title>investingfor</title>
         <base href="/">
-        <!-- Viewport mobile tag for sensible mobile support -->
+
+        <!--META TAGS-->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <!--META TAGS END-->
 
         <!--STYLES-->
         <link rel="stylesheet" href="/styles/css/about.css">
         <link rel="stylesheet" href="/styles/css/animate.min.css">
         <link rel="stylesheet" href="/styles/css/bootstrap-social.css">
         <link rel="stylesheet" href="/styles/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/styles/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/css/intro.css">
         <link rel="stylesheet" href="/styles/css/theme.css">
         <link rel="stylesheet" href="/bower_components/nvd3/build/nv.d3.css">
         <!--STYLES END-->
 
         <!--FONTS-->
-        <link href='http://fonts.googleapis.com/css?family=Lato:400,100,300,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300,200' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Quicksand:400.700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="/fonts/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300,200' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Quicksand:400.700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
         <!--FONTS END-->
 
     </head>
-<body>
+    <body>
 
-    <%- body %>
+        <%- body %>
 
-    <!--SCRIPTS-->
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/bower_components/sails.io.js/dist/sails.io.js"></script>
-    <script src="/bower_components/angularSails/dist/ngsails.io.js"></script>
-    <script src="/bower_components/lodash/lodash.js"></script>
-    <script src="/bower_components/moment/moment.js"></script>
-    <script src="/bower_components/angular-moment/angular-moment.js"></script>
-    <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-    <script src="/bower_components/angular-scroll/angular-scroll.js"></script>
-    <script src="/bower_components/d3/d3.js"></script>
-    <script src="/bower_components/nvd3/build/nv.d3.js"></script>
-    <script src="/bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
-    <script src="/src/app/about/index.js"></script>
-    <script src="/src/app/account/index.js"></script>
-    <script src="/src/app/app.js"></script>
-    <script src="/src/app/footer/index.js"></script>
-    <script src="/src/app/home/index.js"></script>
-    <script src="/src/app/intro/index.js"></script>
-    <script src="/src/app/login/index.js"></script>
-    <script src="/src/app/member/index.js"></script>
-    <script src="/src/app/nav/index.js"></script>
-    <script src="/src/app/register/index.js"></script>
-    <script src="/src/common/models/data.js"></script>
-    <script src="/src/common/models/index.js"></script>
-    <script src="/src/common/models/user.js"></script>
-    <script src="/src/common/services/config.js"></script>
-    <script src="/src/common/services/index.js"></script>
-    <script src="/src/common/services/lodash.js"></script>
-    <script src="/src/common/services/title.js"></script>
-    <script src="/src/common/services/utils.js"></script>
-    <!--SCRIPTS END-->
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/127738/perlin.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
+        <!--SCRIPTS-->
+        <script src="/bower_components/angular/angular.js"></script>
+        <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="/bower_components/sails.io.js/dist/sails.io.js"></script>
+        <script src="/bower_components/angularSails/dist/ngsails.io.js"></script>
+        <script src="/bower_components/lodash/lodash.js"></script>
+        <script src="/bower_components/moment/moment.js"></script>
+        <script src="/bower_components/angular-moment/angular-moment.js"></script>
+        <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+        <script src="/bower_components/angular-scroll/angular-scroll.js"></script>
+        <script src="/bower_components/d3/d3.js"></script>
+        <script src="/bower_components/nvd3/build/nv.d3.js"></script>
+        <script src="/bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+        <script src="/src/app/about/index.js"></script>
+        <script src="/src/app/account/index.js"></script>
+        <script src="/src/app/app.js"></script>
+        <script src="/src/app/footer/index.js"></script>
+        <script src="/src/app/home/index.js"></script>
+        <script src="/src/app/intro/index.js"></script>
+        <script src="/src/app/login/index.js"></script>
+        <script src="/src/app/member/index.js"></script>
+        <script src="/src/app/nav/index.js"></script>
+        <script src="/src/app/register/index.js"></script>
+        <script src="/src/common/models/data.js"></script>
+        <script src="/src/common/models/index.js"></script>
+        <script src="/src/common/models/user.js"></script>
+        <script src="/src/common/services/config.js"></script>
+        <script src="/src/common/services/index.js"></script>
+        <script src="/src/common/services/lodash.js"></script>
+        <script src="/src/common/services/title.js"></script>
+        <script src="/src/common/services/utils.js"></script>
+        <!--SCRIPTS END-->
+        
+        <!--CDNS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/127738/perlin.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
+        <!--CDNS END-->
 
-    <!--TEMPLATES-->
-    <script type="text/javascript" src="/templates.js"></script>
-    <!--TEMPLATES END-->
+        <!--TEMPLATES-->
+        <script type="text/javascript" src="/templates.js"></script>
+        <!--TEMPLATES END-->
 
-</body>
+    </body>
 </html>
