--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,17 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
         <!--FONTS END-->
 
+        <!--ANALYTICS-->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-66604530-17', 'auto');
+          ga('send', 'pageview');
+        </script>
+        <!--ANALYTICS END-->
+
     </head>
     <body>
 
