--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -45,7 +45,7 @@
 	<br><br><br>
 </div>
 
-<div style="background-color:rgb(220,220,220);">
+<!--<div style="background-color:rgb(220,220,220);">
 	<br><br><br>
 	<h1 style="text-align:center;">why you'll love investingfor</h1>
 	<br><br>
@@ -60,7 +60,7 @@
 	<br>
 	<p class="lead" style="text-align:center;">investingfor us all.</p>
 	<br><br><br>
-</div>
+</div>-->
 
 <div style="background-color:rgb(240,240,240);text-align:center;">
 	<br><br><br>
