--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -68,6 +68,7 @@
         <script src="/src/app/register/index.js"></script>
         <script src="/src/common/models/data.js"></script>
         <script src="/src/common/models/index.js"></script>
+        <script src="/src/common/models/prediction.js"></script>
         <script src="/src/common/models/user.js"></script>
         <script src="/src/common/services/config.js"></script>
         <script src="/src/common/services/index.js"></script>
