--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -2,6 +2,10 @@
 <!--<nvd3 options='options' data='data'></nvd3>
 <nvd3 options='directedOptions' data='directedData'></nvd3>-->
 
+
+<nvd3 options='options' data='data'></nvd3>
+
+
 <div class="container" id="about">
 	<div style="height:50px;"></div>
     <div style="text-align:center;" id="header-text-area">
