--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -3,7 +3,7 @@
 	<p>our network of advisors, consisting of hunderds of companies spanning the globe.</p> 
 
 	<br><br><br>
-	<nvd3 options='aboutOptions' data='aboutData'></nvd3>
+	<nvd3 options='options' data='data'></nvd3>
 	<br><br><br>
 
   <div class="row">
