--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -5,7 +5,7 @@
 
 <div class="container" id="about">
 	<div style="height:50px;"></div>
-    <div style="text-align:center;" id="header-text-area">
+    <div style="text-align:left;" id="header-text-area">
        <h1>empowered financial representation</h1>
        <h3 style="">backed by sound, open, data</h3>
     </div>
@@ -63,21 +63,22 @@
 	<br><br><br>
 </div>-->
 
-<div style="background-color:rgb(240,240,240);text-align:center;">
-	<br><br><br>
-	<div class="container">
-		<h1>Activity</h1>
-		<h4>sound and transparent investments</h4>
-	</div>
-	<br><br><br>
-</div>
-
 <div style="background-color:rgb(220,220,220);">
 	<br><br><br>
 	<div class="container">
 		<p>decentralized network that works together to power financial simulations.</p>
 		<nvd3 options='options' data='data'></nvd3>
 
+	</div>
+	<br><br><br>
+</div>
+
+
+<div style="background-color:rgb(240,240,240);text-align:left;">
+	<br><br><br>
+	<div class="container">
+		<h1>Activity</h1>
+		<h4>sound and transparent investments</h4>
 	</div>
 	<br><br><br>
 </div>
