--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -63,6 +63,7 @@
         <script src="/src/app/home/index.js"></script>
         <script src="/src/app/intro/index.js"></script>
         <script src="/src/app/login/index.js"></script>
+        <script src="/src/app/market/index.js"></script>
         <script src="/src/app/member/index.js"></script>
         <script src="/src/app/nav/index.js"></script>
         <script src="/src/app/register/index.js"></script>
