--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -1,14 +1,10 @@
 <div class="container">
-	
-	<h1>member</h1>
-	<p>representing $1,000,000,000</p> 
-	<!--or array calc-->
-	<!--being more innovation at the pos-->
-	<p>return %</p>
-	<p>portfolio</p>
-	<p>positions</p>
-	<p>trade history</p>
-	<p>select to represent</p><!--for x $$$$ or array etc-->
 
+	<h1>{{stateParams.path1}} - {{stateParams.path2}}</h1>
+	
+	<br><br><br>
+	<nvd3 options='options' data='data'></nvd3>
+	<br><br><br>
+	
 </div>
 <div style="height:100px;"></div>
