--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -3,8 +3,19 @@
 	<h1>{{stateParams.path1}} - {{stateParams.path2}}</h1>
 	
 	<br><br><br>
-	<nvd3 options='options' data='data'></nvd3>
+	<h2>5 Min Prediction</h2>
+	<nvd3 options='options' data='fiveMinData'></nvd3>
 	<br><br><br>
+
+	<br><br><br>
+	<h2>Thirty Min Prediction</h2>
+	<nvd3 options='options' data='thirtyMinData'></nvd3>
+	<br><br><br>
+
+	<h2>Current: null</h2>
+	<h2>Prediction in 5 Min: null</h2>
+	<h2>Prediction in 30 Min: null</h2>
+
 	
 </div>
 <div style="height:100px;"></div>
