--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="text-align:left">
 
 	<h1>{{stateParams.path1}} - {{stateParams.path2}}</h1>
 	
@@ -12,10 +12,61 @@
 	<nvd3 options='options' data='thirtyMinData'></nvd3>
 	<br><br><br>
 
-	<h2>Current: null</h2>
-	<h2>Prediction in 5 Min: null</h2>
-	<h2>Prediction in 30 Min: null</h2>
+	<div >
+		<h3>Current</h3>
+		<h3>Price: {{currentData.last_price}}</h3>
+		<h3>Bid: {{currentData.bid}}</h3>
+		<h3>Ask: {{currentData.ask}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>1 Min Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>5 Min Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>30 Min Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>1 Hr Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>6 Hr Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>12 Hr Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
+	<br><br>
+	<div>
+		<h3>24 Hr Prediction</h3>
+		<h3>Price: null</h3>
+		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+	</div>
 
-	
 </div>
 <div style="height:100px;"></div>
