--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -22,8 +22,8 @@
 	<div>
 		<h3>1 Min Prediction</h3>
 		<h3>Price: null</h3>
-		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
-		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+		<h3>Bid: null</h3>
+		<h3>Ask: null</h3>
 	</div>
 	<br><br>
 	<div>
@@ -36,8 +36,8 @@
 	<div>
 		<h3>30 Min Prediction</h3>
 		<h3>Price: null</h3>
-		<h3>Bid: {{currentPredictionFiveMin[0]}}</h3>
-		<h3>Ask: {{currentPredictionFiveMin[1]}}</h3>
+		<h3>Bid: {{currentPredictionThirtyMin[0]}}</h3>
+		<h3>Ask: {{currentPredictionThirtyMin[1]}}</h3>
 	</div>
 	<br><br>
 	<div>
