--- a/assets/src/app/footer/index.tpl.html
+++ b/assets/src/app/footer/index.tpl.html
@@ -1,9 +1,7 @@
 <div class="footer" ng-controller="FooterCtrl">
   <div class="container">
-    {{date | date:'yyyy'}} <a href="/">voetr</a>
+    {{date | date:'yyyy'}} <a href="/">investingfor</a>
     <a href="/about">about</a>
-    <a href="/bills">bills</a>
-    <a href="/committees">committees</a>
-    <a href="/votes">votes</a>
+    <a href="#">terms</a>
   </div>
 </div>
