--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -89,4 +89,5 @@
 </div>
 
 <div style="text-align:center" ng-include="'register/index.tpl.html'"></div>
+<div ng-include="'footer/index.tpl.html'"></div>
 
