--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="text-align:left">
 	<h2>investingfor</h2>
 	<p>our network of advisors, consisting of hunderds of companies spanning the globe.</p> 
 
@@ -33,3 +33,5 @@
 
 </div>
 <div style="height:100px;"></div>
+<div ng-include="'register/index.tpl.html'"></div>
+<div ng-include="'footer/index.tpl.html'"></div>
