--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -1,5 +1,83 @@
 <div class="container">
-	
+	<h1>user info</h1>
+	<p>edit etc</p>
+	<h2>api key</h2>
+
+
+
+
+
+STR	Ste
+XEM	NEM
+NXT	NXT
+USDT
+ETH	Et
+LTC	Li
+BCH	Bit
+BTC	Bit
+AMP	Syn
+ARDR
+BCN	By
+BCY	Bit
+BEL
+BLK	Bla
+BTCD
+BTM	Bit
+Tempora
+BTS	Bit
+BURST
+CLAM
+CVC	C
+DAS
+DCR	De
+DGB	Di
+DOGE
+EMC2
+ETC	Ethw
+EXP	Exp
+FCT	Fa
+FLDC
+FLO	Flo
+GAME
+GAS	Gas
+GNO	Gn
+GNT	G
+GRC	Griw
+HUC	Hun
+LBC	LBR
+LSK	
+MAIDw
+NAV	NAV
+NEOS
+NMC	Na
+NXC	Ne
+OMG	Omi
+OMN
+PASC
+PINK
+POT
+PPC
+RADS
+REP
+RIC
+SBD
+SC
+STEEM
+STORJ
+STRAT
+SYS	Sys
+VIA	Via
+VRC	Ve
+VTC	Ve
+XBC	Bit
+XCP	Cou
+XMR	Mo
+XPM	Pri
+XRP	Ri
+XVC	V
+ZEC	Z
+ZRX	0x
+
 
 </div>
-<div style="height:100px;"></div>
+<div st
