--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -65,7 +65,7 @@
 
 <div style="text-align:left">
 	<br><br><br>
-	<div class="container">
+	<div class="container" style="max-height:500px;overflow:scroll">
 		<h4>decentralized network that works together to power financial simulations.</h4>
 		<nvd3 options='options' data='data'></nvd3>
 		<br><br>
