--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -115,9 +115,9 @@
 
 		<button class="btn btn-default" ng-click="seletetData('BTC', 'BCY', '1000')">'BTC', 'BCY', '1000'</button>
 		<nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3>
-		<div ng-repeat="someData in marketData">
+		<!--<div ng-repeat="someData in marketData">
 			{{someData.assetPair}}, {{someData.price}}, {{someData.currentBid}}, {{someData.currentAsk}}, {{someData.currentAsk - someData.currentBid}} {{someData.createdAt}}, {{someData.delta}}
-		</div>
+		</div>-->
 		<h4>sound and transparent investments</h4>
 	</div>
 	<br><br><br>
