--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!--META TAGS END-->
 
+        <!--FAVICONS-->
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="/favicons/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/favicons/manifest.json">
+        <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="/favicons/favicon.ico">
+        <!--FAVICONS END-->
+
         <!--STYLES-->
         <link rel="stylesheet" href="/styles/css/about.css">
         <link rel="stylesheet" href="/styles/css/animate.min.css">
